# MediTrack

./: CMakeLists.txt  README.md
data/: usr
ideas_random/: CRUD_Pac_Cons.c  Medicamentos.c  Proveedores.c  a.c  a.out  archivos_prueba.c  arrary_wlnode.c  btn_css.c  btn_img.c  cargartexto_tview.c  checkbox.c  child_window.c  combo_box.c  contador_chars.c  crear_usuario.c  fecha.c  fuentes_custom.c  gchar.c  gchar2char.c  gtk_Sep.c  gtk_pixbuf.c  hilos.c  insercion.c  interact_streev.c  interactuar_tview.c  liberar_cosos.c  login.c  obtener_datos_fila.c  resize_image.c  scroll.c  switch_ventanas.c  tabla_con_indicador_vf.c  temasgtk.c  textview.c  tree_view.c  widl_1.0.c  widl_2.0.c  widl_3.0.c
ideas_random/codigo_antiguo/: form_consul.c  form_consul.h  form_med.c  form_pac.c  listv.c  listv.h  menu.c  menu.h
images/: MockUps.bmpr  resize_image.py
images/original/: resize_image.py
src/: a.out  bar.c  bar.h  consultas.c  consultas.h  form_consul.c  form_consul.h  form_med.c  form_med.h  form_pac.c  form_pac.h  form_prov.c  form_prov.h  gen_usr.c  general.c  general.h  guia.c  guia.h  listv.c  listv.h  listv_bar.c  listv_bar.h  login.c  login.h  main.c  main.h  menu.c  menu.h  reportes.c  reportes.h  widl.c  widl.h
src/datos/entidad/: usr.c  usr.h
src/datos/repositorio/: linked_list.c  linked_list.h  node.c  node.h  repo_usr.h
src/vista/: app.c  app.h  default_window.c  default_window.h
